--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -3,7 +3,7 @@
 /* Container for the sign-in page */
 .signin-container {
   height: fit-content; /* Full viewport height minus 2 pixels */
-  min-height: 100vh; /* Maximum height: 90% of viewport height */
+  min-height: 110vh; /* minimum height 100 viewport height */
   width: 100%; /* Full width */
 
   background-image: url('../assets/sign-in-background.jpg'); /* Background image */
@@ -15,6 +15,10 @@
 
   display: flex; /* Flexbox layout */
   justify-content: center; /* Center content horizontally */
+}
+
+.height-increase {
+  min-height: 130vh;
 }
 
 .signin-form {
