Css change to team container

--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -198,7 +198,7 @@
 .team {
     grid-area: team; /* Assign to the team grid area */
     margin-top: 4vw; /* Top margin for spacing */
-    height: 100vh; /* Full viewport height */
+    height: fit-content; /* Adjust height to fit content */
     
     font-size: 2vw; /* Larger font size */
     
@@ -221,11 +221,11 @@
 
 /* Team text styling */
 .teamText {
+    height: auto; /* Adjust height automatically */
     grid-area: teamText; /* Assign to the text grid area */
-    font-size: 1.3em; /* Larger font size */
+    font-size: 1.4em; /* Larger font size */
     margin-top: 4vw; /* Top margin for spacing */
     margin-left: 2vw; /* Left margin for spacing */
-    background-color: pink; /* Pink background */
     padding-left: 1vw; /*Left padding for text spacing*/
 }
 
